# hmatrix

./: .gitignore  CHANGELOG  CHANGES  CHANGES.md  Config.hs  HSSL.cabal  INSTALL  INSTALL.md  README  README.md  Setup.hs  Setup.lhs  THANKS  THANKS.md  configure  configure.hs  develop.nix  flake.nix  hmatrix-base.cabal  hmatrix.cabal  hmatrix.cabal-windows  hssl.cabal  index.md  index.txt  install.txt  kk.hs  nixpkgs.nix  overlay.nix  reinstall.sh  release.nix  shell.nix  stack.yaml
.circleci/: config.yml
.github/workflows/: main.yml
docs/: SUNDIALS.md
examples/: ButcherTableau.hs  ChangeLog.md  HMatrixReal.hs  LICENSE  Real.hs  Static.hs  VectorShow.hs  benchmarks.hs  bool.hs  bool.ipynb  data.txt  deriv.hs  error.hs  examples.cabal  fitting.hs  inplace.hs  integrate.hs  kalman.hs  latexmat.hs  lie.hs  listlike.hs  minimize.hs  monadic.hs  multiply.hs  ode.hs  oldtests.hs  parallel.hs  pca1.hs  pca2.hs  pinv.hs  pinv.ipynb  pinv1.hs  pinv2.hs  plot.hs  pru.hs  random.hs  repmat.ipynb  root.hs  speed.hs  speed.m  (+6 more)
examples/devel/: functions.c  wrappers.hs
examples/devel/ej1/: wrappers.hs
examples/devel/ej2/: wrappers.hs
examples/devel/example/: functions.c  wrappers.hs
examples/experiments/: Static.hs  bigtests.hs  error.hs  listlike.hs  parallel.hs  speed.hs
lib/: GSL.hs  GSLHaskell.hs  HSSL.hs  LAPACK.hs  LinearAlgebra.hs
lib/Data/: Packed.hs
lib/Data/Packed/: Convert.hs  Development.hs  Foreign.hs  Instances.hs  Internal.hs  Matrix.hs  Plot.hs  Random.hs  ST.hs  Syntax.hs  Tensor.hs  Vector.hs  aux.c  aux.h
lib/Data/Packed/Internal/: Common.hs  Matrix.hs  Signatures.hs  Tensor.hs  Vector.hs  aux.c  aux.h  auxi.c  auxi.h
lib/GSL/: Compat.hs  Differentiation.hs  Fourier.hs  Integration.hs  Matrix.hs  Minimization.hs  Polynomials.hs  Special.hs  Vector.hs  gsl-aux.c  gsl-aux.h
lib/GSL/Special/: Airy.hs  Bessel.hs  Clausen.hs  Coulomb.hs  Coupling.hs  Dawson.hs  Debye.hs  Dilog.hs  Elementary.hs  Ellint.hs  Erf.hs  Exp.hs  Expint.hs  Fermi_dirac.hs  Gamma.hs  Gegenbauer.hs  Hyperg.hs  Internal.hs  Laguerre.hs  Lambert.hs  Legendre.hs  Log.hs  Pow_int.hs  Psi.hs  Synchrotron.hs  Trig.hs  Zeta.hs  airy.h  auto.hs  bessel.h  coupling.h  ellint.h  exp.h  gamma.h  gegenbauer.h  gsl_sf_log.h  lambert.h  legendre.h  log.h  manual.txt
lib/Graphics/: Plot.hs
lib/LAPACK/: Internal.hs  lapack-aux.c  lapack-aux.h
lib/LinearAlgebra/: Algorithms.hs  Instances.hs  Interface.hs  LAPACK.hs  Linear.hs
lib/Numeric/: Chain.hs  Container.hs  ContainerBoot.hs  Conversion.hs  GSL.hs  HMatrix.hs  IO.hs  LinearAlgebra.hs  Matrix.hs  MatrixBoot.hs  Vector.hs
lib/Numeric/GSL/: Differentiation.hs  Fitting.hs  Fourier.hs  Integration.hs  Internal.hs  Matrix.hs  Minimization.hs  ODE.hs  Polynomials.hs  Root.hs  Special.hs  Vector.hs  gsl-aux.c  gsl-aux.h  gsl-ode.c  gsl-vector-aux.c  vector-aux.c
lib/Numeric/GSL/Special/: Airy.hs  Bessel.hs  Clausen.hs  Coulomb.hs  Coupling.hs  Dawson.hs  Debye.hs  Dilog.hs  Elementary.hs  Ellint.hs  Erf.hs  Exp.hs  Expint.hs  Fermi_dirac.hs  Gamma.hs  Gegenbauer.hs  Hyperg.hs  Internal.hs  Internal.hsc  Laguerre.hs  Lambert.hs  Legendre.hs  Log.hs  Pow_int.hs  Psi.hs  Synchrotron.hs  Transport.hs  Trig.hs  Zeta.hs  auto.hs  autoall.sh  bessel.h  clausen.h  coulomb.h  dawson.h  debye.h  dilog.h  elementary.h  ellint.h  erf.h  (+13 more)
lib/Numeric/HMatrix/: Data.hs  Devel.hs
lib/Numeric/LinearAlgebra/: Algorithms.hs  Data.hs  Instances.hs  Interface.hs  LAPACK.hs  Linear.hs  Real.hs  Testing.hs  Tests.hs  Util.hs
lib/Numeric/LinearAlgebra/Data/: Devel.hs
lib/Numeric/LinearAlgebra/LAPACK/: clapack.h  f2c.h  lapack-aux.c  lapack-aux.h
lib/Numeric/LinearAlgebra/Tests/: Instances.hs  Properties.hs  quickCheckCompat.h
lib/Numeric/LinearAlgebra/Util/: Convolution.hs  Vector.hs  vector-aux.c
