Name:               HSSL2
Version:            0.1
License:            GPL
--License-file:       LICENSE
Author:             Alberto Ruiz
Maintainer:         aruiz@um.es
Stability:          provisional
--Homepage:           http://dis.um.es/~alberto/GSLHaskell
Package-url:
Synopsis:           Simple Scientific Library
Description:
Category:           Numerical
tested-with:        GHC ==6.6.1
Build-Depends:      base, haskell98
Extensions:         ForeignFunctionInterface
--                    MultiParamTypeClasses,
--                    FunctionalDependencies
--ghc-options:        -Wall
ghc-options:        -O
hs-source-dirs:     lib
Exposed-modules:
                    Data.Packed.Internal,
                    Data.Packed.Internal.Common,
                    Data.Packed.Internal.Vector,
                    Data.Packed.Vector,
                    Data.Packed.Internal.Matrix, 
                    Data.Packed.Matrix,
                    GSL.Vector,
                    LinearAlgebra.Linear,
                    Data.Packed.Internal.Tensor, Data.Packed.Tensor
                    Data.Packed.Plot,
                    LAPACK,
                    GSL.Matrix,
                    GSL.Differentiation, GSL.Integration,
                    GSL.Special, GSL.Special.Internal,
                    GSL.Special.Gamma, GSL.Special.Erf,
                    GSL.Special.Airy, GSL.Special.Exp,
                    GSL.Special.Bessel, GSL.Special.Clausen,
                    GSL.Special.Coulomb, GSL.Special.Coupling,
                    GSL.Special.Dawson, GSL.Special.Debye,
                    GSL.Special.Dilog, GSL.Special.Elementary,
                    GSL.Special.Ellint,
                    GSL.Special.Expint, GSL.Special.Fermi_dirac,
                    GSL.Special.Gegenbauer, GSL.Special.Hyperg,
                    GSL.Special.Laguerre, GSL.Special.Lambert,
                    GSL.Special.Pow_int, GSL.Special.Psi,
                    GSL.Special.Synchrotron, GSL.Special.Trig,
                    GSL.Special.Zeta, GSL.Special.Log,
                    GSL.Special.Legendre,
                    GSL.Fourier,
                    GSL.Polynomials,
                    GSL.Minimization,
                    GSL.Compat,
                    GSL,
                    LinearAlgebra, LinearAlgebra.Algorithms
Other-modules:
C-sources:          lib/Data/Packed/Internal/aux.c,
                    lib/LAPACK/lapack-aux.c,
                    lib/GSL/gsl-aux.c
extra-libraries:    gsl cblas lapack
cc-options:         -O4
ghc-prof-options:   -auto-all
