name:                examples
version:             0.20.0.0
synopsis:            Example usage of the various hmatrix packages
homepage:            https://github.com/albertoruiz/hmatrix
license:             BSD3
license-file:        LICENSE
author:              Dominic Steinitz
maintainer:          dominic@steinitz.org
copyright:           Dominic Steinitz, Novadiscovery
category:            Math
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable vectorShow
  main-is:             VectorShow.hs
  build-depends:       base >=4.10 && <5,
                       hmatrix,
                       hmatrix-gsl
  default-language:    Haskell2010
